--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
     <link rel="stylesheet" href="css/network.css">
 
 </head>
-<style>
-    circle {
-        stroke: white;
-        fill: #05668D;
-        opacity: 0.3;
-        stroke-width: 2px;
-    }
-</style>
+
+
+
 <body>
 <h2>Genome visualization</h2>
 <div class="networkChart" id="chart"></div>
@@ -31,9 +26,9 @@
 
 <!--supergroup-->
 <!--<script src="lib/underscore-min.js"></script>-->
-<script src="lib/d3.v5.10.min.js"></script>
-<script src="lib/lodash.min.js"></script>
-<script src="lib/supergroup.js"></script>
+<script src="lib/d3.v5.min.js"></script>
+<!--<script src="lib/lodash.min.js"></script>-->
+<!--<script src="lib/supergroup.js"></script>-->
 <script src="lib/d3-array.v2.min.js"></script>
 
 
