--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
-<!doctype html><html lang="en"><head>    <!-- Required meta tags -->    <meta charset="utf-8">    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">    <meta http-equiv="X-UA-Compatible" content="IE=edge">    <title>BioVis@IEEE 2019</title>    <!-- Bootstrap CSS -->    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <link rel="stylesheet" href="css/main.css">    <link rel="stylesheet" href="css/network.css"></head><body>    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">        <!-- Brand/logo -->        <a class="navbar-brand" href="#">            <img src="img/gene.png" alt="logo" style="width:40px;">        </a>        <h4>Genome Network Visualization</h4>        <!-- Links -->        <ul class="navbar-nav">            <li class="nav-item">                <a class="nav-link" href="#">Demo</a>            </li>            <li class="nav-item">                <a class="nav-link" href="#">Video</a>            </li>            <li class="nav-item">                <a class="nav-link" href="#"></a>            </li>        </ul>    </nav><!--    <div class="wrapper">--><!--        &lt;!&ndash; Sidebar Holder &ndash;&gt;--><!--        <nav id="sidebar">--><!--            <div class="sidebar-header">--><!--                <img id ="geneIcon" src="img/gene.png" alt="logo" style="width:40px;">--><!--                <h5>Genome Network</h5>--><!--            </div>--><!--            <ul class="list-unstyled components">--><!--                <p>Dummy Heading</p>--><!--                <li class="active">--><!--                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>--><!--                    <ul class="collapse list-unstyled" id="homeSubmenu">--><!--                        <li>--><!--                            <a href="#">Home 1</a>--><!--                        </li>--><!--                        <li>--><!--                            <a href="#">Home 2</a>--><!--                        </li>--><!--                        <li>--><!--                            <a href="#">Home 3</a>--><!--                        </li>--><!--                    </ul>--><!--                </li>--><!--                <li>--><!--                    <a href="#">About</a>--><!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>--><!--                    <ul class="collapse list-unstyled" id="pageSubmenu">--><!--                        <li>--><!--                            <a href="#">Page 1</a>--><!--                        </li>--><!--                        <li>--><!--                            <a href="#">Page 2</a>--><!--                        </li>--><!--                        <li>--><!--                            <a href="#">Page 3</a>--><!--                        </li>--><!--                    </ul>--><!--                </li>--><!--                <li>--><!--                    <a href="#">Portfolio</a>--><!--                </li>--><!--                <li>--><!--                    <a href="#">Contact</a>--><!--                </li>--><!--            </ul>--><!--            <ul class="list-unstyled CTAs">--><!--                <li>--><!--                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>--><!--                </li>--><!--                <li>--><!--                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>--><!--                </li>--><!--            </ul>--><!--        </nav>--><!--        &lt;!&ndash; Page Content Holder &ndash;&gt;--><!--        <div id="content">--><!--            <nav class="navbar navbar-expand-lg navbar-light bg-light">--><!--                <div class="container-fluid">--><!--                    <button type="button" id="sidebarCollapse" class="navbar-btn">--><!--                        <span></span>--><!--                        <span></span>--><!--                        <span></span>--><!--                    </button>--><!--                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">--><!--                        <i class="fas fa-align-justify"></i>--><!--                    </button>--><!--                    <div class="collapse navbar-collapse" id="navbarSupportedContent">--><!--                        <ul class="nav navbar-nav ml-auto">--><!--                            <li class="nav-item active">--><!--                                <a class="nav-link" href="#">Page</a>--><!--                            </li>--><!--                            <li class="nav-item">--><!--                                <a class="nav-link" href="#">Page</a>--><!--                            </li>--><!--                            <li class="nav-item">--><!--                                <a class="nav-link" href="#">Page</a>--><!--                            </li>--><!--                            <li class="nav-item">--><!--                                <a class="nav-link" href="#">Page</a>--><!--                            </li>--><!--                        </ul>--><!--                    </div>--><!--                </div>--><!--            </nav>--><!--&lt;!&ndash;            <div class="networkChart" id="chart"></div>&ndash;&gt;--><!--    </div>--><!--<div id="header">--><!--    <h2>Genome visualization</h2>--><!--</div>--><div class="networkChart" id="chart"></div><!-- jQuery first, then Popper.js, then Bootstrap JS --><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script><script type="text/javascript">    $(document).ready(function () {        $('#sidebarCollapse').on('click', function () {            $('#sidebar').toggleClass('active');            $(this).toggleClass('active');        });    });</script><script src="lib/underscore-min.js"></script><script src="lib/lodash.min.js"></script><script src="lib/d3.v5.10.min.js"></script><script src="lib/supergroup.js"></script><script src="lib/d3-array.v2.min.js"></script><script src="js/network.js"></script><script src="js/links.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>BioVis@IEEE 2019</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/network.css">
+
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand/logo -->
+        <a class="navbar-brand" href="#">
+            <img src="img/gene.png" alt="logo" style="width:40px;">
+        </a>
+        <h4>Genome Network Visualization</h4>
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Demo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Video</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"></a>
+            </li>
+        </ul>
+    </nav>
+
+<!--    <div class="wrapper">-->
+<!--        &lt;!&ndash; Sidebar Holder &ndash;&gt;-->
+<!--        <nav id="sidebar">-->
+<!--            <div class="sidebar-header">-->
+<!--                <img id ="geneIcon" src="img/gene.png" alt="logo" style="width:40px;">-->
+<!--                <h5>Genome Network</h5>-->
+<!--            </div>-->
+
+<!--            <ul class="list-unstyled components">-->
+<!--                <p>Dummy Heading</p>-->
+<!--                <li class="active">-->
+<!--                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>-->
+<!--                    <ul class="collapse list-unstyled" id="homeSubmenu">-->
+<!--                        <li>-->
+<!--                            <a href="#">Home 1</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#">Home 2</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#">Home 3</a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">About</a>-->
+<!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>-->
+<!--                    <ul class="collapse list-unstyled" id="pageSubmenu">-->
+<!--                        <li>-->
+<!--                            <a href="#">Page 1</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#">Page 2</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#">Page 3</a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Portfolio</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="#">Contact</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+
+<!--            <ul class="list-unstyled CTAs">-->
+<!--                <li>-->
+<!--                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </nav>-->
+
+<!--        &lt;!&ndash; Page Content Holder &ndash;&gt;-->
+<!--        <div id="content">-->
+
+<!--            <nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--                <div class="container-fluid">-->
+
+<!--                    <button type="button" id="sidebarCollapse" class="navbar-btn">-->
+<!--                        <span></span>-->
+<!--                        <span></span>-->
+<!--                        <span></span>-->
+<!--                    </button>-->
+<!--                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                        <i class="fas fa-align-justify"></i>-->
+<!--                    </button>-->
+
+<!--                    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+<!--                        <ul class="nav navbar-nav ml-auto">-->
+<!--                            <li class="nav-item active">-->
+<!--                                <a class="nav-link" href="#">Page</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Page</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Page</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Page</a>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </nav>-->
+<!--&lt;!&ndash;            <div class="networkChart" id="chart"></div>&ndash;&gt;-->
+
+
+<!--    </div>-->
+
+<!--<div id="header">-->
+<!--    <h2>Genome visualization</h2>-->
+<!--</div>-->
+
+<div class="networkChart" id="chart"></div>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+            $(this).toggleClass('active');
+        });
+    });
+</script>
+
+<script src="lib/underscore-min.js"></script>
+<script src="lib/lodash.min.js"></script>
+<script src="lib/d3.v5.10.min.js"></script>
+<script src="lib/supergroup.js"></script>
+<script src="lib/d3-array.v2.min.js"></script>
+<script src="js/network.js"></script>
+<script src="js/links.js"></script>
+</body>
+</html>
